# example-marimo

./: .gitignore  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: se-ux-ui-designer.agent.md
.github/instructions/: general.instructions.md
.github/prompts/: add-model.md  generate-tests.md  new-notebook.md  optimize-query.md
.github/scripts/: build.py
.github/workflows/: ci.yml  deploy.yml
data/: .gitkeep
docs/: DESIGN.md  ROADMAP.md
docs/copilot/: PLAN.md
notebooks/: action_tracker.py  anomaly_detection.py  dashboard.py  dormant_users.py  index.py  time_analysis.py  user_activity.py
scripts/: generate_test_data.py
scripts/config/: actions.yaml  repositories.yaml  settings.yaml  users.yaml
src/audit_analyzer/: __init__.py  loader.py  models.py  py.typed
src/audit_analyzer/analyzers/: __init__.py  anomaly.py  base.py  time_series.py  user_activity.py
src/audit_analyzer/utils/: __init__.py  constants.py
tests/: conftest.py  test_analyzers.py  test_loader.py  test_models.py
tests/fixtures/: sample_audit_log.json
