# pyproject.toml - GitHub Organization Audit Log Analyzer
# Python 3.12 / marimo / uv

[project]
name = "audit-analyzer"
version = "0.1.0"
description = "GitHub Organization Audit Log analyzer using marimo notebooks"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.12"
keywords = ["github", "audit-log", "marimo", "analytics", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]

# ============================================================
# Core Dependencies
# ============================================================
# 注意: WASM版（Pyodide）では Polars/DuckDB は動作しません
# サーバー版とWASM版で共通コードを使う場合は narwhals を検討
dependencies = [
    # ノートブック環境
    "marimo>=0.18.0",

    # データ処理（サーバー版）
    "polars>=1.18.0",        # 高速DataFrame（WASM非対応）
    "duckdb>=1.2.0",         # 分析用DB（WASM非対応）

    # データバリデーション
    "pydantic>=2.10.0",      # Pyodide対応

    # 可視化
    "altair>=5.5.0",         # Pyodide対応、Vega-Lite基盤

    # ユーティリティ
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",        # 高速JSON（大規模データ用）
]

# ============================================================
# Optional Dependencies
# ============================================================
[project.optional-dependencies]
# 開発用ツール
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "mypy>=1.13.0",
]

# テスト
test = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.120.0",   # Property-based testing
    "polyfactory>=2.18.0",   # Pydanticモデルのファクトリ
]

# ドキュメント生成
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

# WASM版用の代替スタック（pandasベース）
# Pyodideでサポートされているパッケージのみ
wasm = [
    "pandas>=2.2.0",         # Pyodide対応
    "pyarrow>=18.0.0",       # Parquet読み込み用
]

# 全部入り（CI用）
all = [
    "audit-analyzer[dev,test,docs]",
]

# ============================================================
# Entry Points / Scripts
# ============================================================
[project.scripts]
# CLIコマンド（必要に応じて）
audit-analyzer = "audit_analyzer.cli:main"

# ============================================================
# Build System
# ============================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_analyzer"]

# ============================================================
# Dependency Groups (PEP 735)
# ============================================================
[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.120.0",
    "polyfactory>=2.18.0",
]

# ============================================================
# Ruff Configuration
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "notebooks", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "PERF",   # Perflint
    "FURB",   # refurb
]
ignore = [
    "E501",   # line too long (formatterに任せる)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLC0415", # import not at top level (遅延インポートを許可)
    "PERF401", # list.extend vs append (可読性優先)
    "PLW2901", # for loop variable overwritten (意図的)
    "SIM117",  # nested with (可読性優先)
    "SIM108",  # ternary operator (可読性優先)
    "SIM103",  # return condition directly (可読性優先)
    "TC003",   # type-checking block (シンプルさ優先)
    "B018",    # useless expression (marimoのUI要素に必要)
    "RUF001",  # ambiguous unicode (日本語の括弧等を許可)
    "UP038",   # isinstance with tuple (可読性優先)
    "PTH123",  # open() vs Path.open() (シンプルさ優先)
]

[tool.ruff.lint.per-file-ignores]
# テストではassertやmagic valueを許可
"tests/**/*.py" = ["S101", "PLR2004", "ARG001", "ERA001"]
# ノートブックでは未使用変数を許可（marimo UIバインディング用）
"notebooks/**/*.py" = ["F841", "ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["audit_analyzer"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# ============================================================
# Pytest Configuration
# ============================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
# 推奨オプション
addopts = [
    "-ra",                    # show extra test summary info
    "-q",                     # quiet mode
    "--strict-markers",       # unknown markers are errors
    "--strict-config",        # warn about unknown config
    "-x",                     # stop on first failure (開発時)
    "--tb=short",             # shorter traceback format
]
# カスタムマーカー
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "wasm: marks tests for WASM compatibility",
]
# asyncioモード
asyncio_mode = "auto"
# フィルタリング
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================
# Coverage Configuration
# ============================================================
[tool.coverage.run]
source = ["src/audit_analyzer"]
branch = true
parallel = true
omit = [
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true

# ============================================================
# MyPy Configuration
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

# サードパーティライブラリの型チェック設定
[[tool.mypy.overrides]]
module = [
    "polars.*",
    "duckdb.*",
    "altair.*",
    "marimo.*",
    "orjson.*",
]
ignore_missing_imports = true

# テストファイルは緩めの設定
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ============================================================
# Bandit Configuration (Security)
# ============================================================
[tool.bandit]
exclude_dirs = ["tests", "notebooks", "scripts"]
skips = [
    "B101",   # assert文を許可（テスト用）
    "B311",   # random使用を許可（テストデータ生成用）
    "B105",   # 文字列定数を許可（アクション名定義）
    "B608",   # DuckDBのread_json_autoでファイルパス使用（意図的）
    "B404",   # subprocess使用を許可（ビルドスクリプト用）
    "B603",   # subprocess呼び出しを許可（ビルドスクリプト用）
]
